# Linear-solver

./: .gitignore  CMakeLists.txt  README.md
Documentation/: Doxyfile
src/: Cholesky.h  Cholesky.tpp  ConjugateGradient.h  ConjugateGradient.tpp  DirectMethods.h  DirectMethods.tpp  IndirectMethods.h  IndirectMethods.tpp  LUMethod.h  LUMethod.tpp  LinearSolver.h  LinearSolver.tpp  LowerTriangular.h  LowerTriangular.tpp  Matrix.h  Matrix.tpp  Read_file.h  Read_file.tpp  Richardson.h  Richardson.tpp  UpperTriangular.h  UpperTriangular.tpp  Vector.h  Vector.tpp  Warning.h  main.cpp
test/: Matrix_1000x1000_all.cpp  Matrix_A1_3by3_test.cpp  Matrix_A2_3by3_test.cpp
